feature(create):enpoint for creating bookings
    Implementation for creating booking enpoint to enable users create
    bookings.

    [Finished #167279324 #167279324]
